styles.css
body {
    font-family: 'Nunito', sans-serif;
    font-size: 12pt;
    overflow-x: hidden;
    height: 100%;
}

/*  SECTIONS  */
.section {
	clear: both;
	padding: 0px;
	margin: 0px;
}

/*  COLUMN SETUP  */
.col {
	display: block;
	float:left;
	margin: 0 0 0 2%; /*originally was 2% 0 1% 2%*/
}

.col:first-child { 
    margin-left: 2%; 
}

/*  GROUPING  */
.group:before,
.group:after { content:""; display:table; }
.group:after { clear:both;}
.group { zoom:1; /* For IE 6/7 */ }
/*  GRID OF SIX  */
.span_6_of_6 {
	width: 96%;
}

.span_5_of_6 {
  	width: 79.666667%;
}

.span_4_of_6 {
  	width: 63.333333%;
}

.span_3_of_6 {
  	width: 47%;
}

.span_2_of_6 {
  	width: 30.666667%; /*take into consideration gutter width*/
}

.span_1_of_6 {
  	width: 14.333333%; /*100% - (7 gutters of 2%) / 6columns*/
}


/*REPEATABLE CLASSES AND SELECTORS*/
.fixedPosition {  
    position: fixed;
}

.secondLeftColumn {
    margin-left: 18.333333%;
}

.centerAlign {
    position: absolute;
        top: 50%;
        left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%);
}

b {
    font-weight: 700;
}

a {
    color: black;
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}

a:visited {
    color: inherit;
}


/*IDS AND CLASSES*/
#name {
    font-size: 1.6rem;
    font-weight: 700;
    
    height: 40px;
    box-sizing: border-box;
    
    position: fixed;
        top: 25px;
        left: 25px;
    z-index: 9999;
    color: #fa3727;
    
}

#name p a {
    display: inline-block;
    padding-bottom: 6px;
    border-bottom: 3px solid #fa3727;
    color: #fa3727;
}

#name p a.noborder {
    border-bottom: none;
    color: #000;
}

.noborder {
    border-bottom: none;
}

#name p a:hover {
/*    border-bottom: 3px solid #000;*/
    color: #fa3727;
}

span:hover {
    color: #fa3727;
}

#introduction {
    height: auto;
    display: none;
}

#introduction p:first-child {
    font-size: 3.0rem;
    font-weight: 700;
    font-style: italic;
    margin-bottom: 2.4rem;
    
    color: #3D3D3D;
}

#introduction p {
    font-size: 1.0rem;
    font-weight: 300;
    line-height: 1.8rem;
    margin-bottom: 1.6rem;
}

#introduction p a {
    text-decoration: underline;
}

#introduction p a:hover {
    text-decoration: underline;
    color: #fa3727;
}

nav {
    font-size: 1.6rem;
    font-weight: 700;
    line-height: 1.9rem;
    
    height: 40px;
    
    position: fixed;
        bottom: 15px; /*FIX WHEN I GET BACK BECAUSE IT AINT RESPONSIVE*/
        left: 25px;
    z-index: 9999;
    
}

nav p a:hover {
/*    border-bottom: 3px solid black;*/
    color: #fa3727;
}

nav p a.addborder {
    border-bottom: 3px solid #fa3727;
     color: #fa3727;
}

#nextproject {
    font-size: 1.6rem;
    font-weight: 700;
    line-height: 1.9rem;
    
    box-sizing: border-box;
    height: 35px;
    
    position: fixed;
        bottom: 20px;
        right: 25px;
    z-index: 9999;
    
    display: none;
}

#nextproject a:hover {
/*    border-bottom: 3px solid #fa3727;*/
    color: #fa3727;
}

/*PROJECT INFO-RELATED CLASSES*/
.project {
    font-size: 1.2rem;
    font-weight: 400;
    line-height: 1.6rem;
    
    border-top: 1px solid #000;
    border-bottom: 1px solid #000;
    padding: 6px 0;
    margin-top: 40px;
    margin-bottom: 12px;
}


.projectname {
    font-weight: 700;
}

.projectinfo {
    font-size: 1.2rem;
    font-weight: 300;
    line-height: 1.7rem;
}

table {
    width: 100%;
    height: auto;
   
    
}

.projectlist {
    width: 100%;
    height: auto;
}

table tr th {
    font-size: 0.8rem;
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 0.075rem;
    
    padding: 40px 0 20px;
}

tr:first-child th {
    padding: 0 0 18px 0;
}

table tr, td{
    text-align: left;
}

table tr td {
    font-size: 1.4rem;
    font-weight: 700;
    
    padding: 6px 0;
}

table tr td a:hover {
    color: #fa3727;
}

table tr td:first-child {
    font-size: 0.8rem;
    font-style: italic;
    font-weight: 300;
}

table tr td:nth-child(3) img {
    width: 50vw;
    height: auto;
    opacity: 0.5;
    position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    z-index: 1;
    display: none;
   
}

.backgroundimg {
    width: 3000px;
}

table tr td a:hover+img {
    opacity: 100%;
}

.backgroundimages img {
    width: 60vw;
    min-height: 60vh;
    object-fit: contain;
    margin: 0 auto;
    display: block;
}


/*PROJECT-PAGE RELATED CLASSES AND IDS*/
.projecttitle {
    
    font-size: 1.6rem;
    font-weight: 700;
    
    display: inline-block;
    width: auto;
    box-sizing: border-box;
    
    margin-top: 25px;
    padding-bottom: 6px;
    border-bottom: 3px solid #fa3727;
    position: fixed;
    z-index: 9999;
    
    color: #fa3727
    
}
.projectinfotable {
    margin-bottom: 40px;
    margin-top: 100px;
/*    border: 1px solid black;*/
}

.projectinfotable a {
    text-decoration: underline;
}

h2, .projectinfotable tr td:first-child {
    font-size: 1.2rem;
    font-style: italic;
    font-weight: 700;
    
    width: 23.5%;
    padding-bottom: 16px;
    
/*    border: 1px solid black;*/
}

.projectinfotable tr td:nth-child(2) {
    font-size: 1.2rem;
    font-weight: 300;
    padding-left: 2%;
    
/*    border: 1px solid black;*/
}

h2 {
    display: inline-block;
    width: 23.5%;
    vertical-align: top;
    
    float: left;
    padding: 6px 0;
/*    border-bottom: 2px solid #000;*/
    clear: both;
}

.bodycopy {
    font-size: 1.2rem;
    font-weight: 300;
    line-height: 1.85rem;
    
    float: right;
    width: 74.5%;
    padding-left: 2%;
    margin-bottom: 20px;
}

.bodycopy a {
    text-decoration: underline;
}

.bodycopy a:hover {
    color: #fa3727;
}

.bodycopy:last-child {
    margin-bottom: 60px;
}


/*IMG OR VID CLASSES AND IDS*/
.projectImage {
    margin-top: 15px;
    margin-bottom: 35px;
    float: right;
    width: 74.5%;
    
}

.portraitimg {
    width: 49%;
    float: left;
    margin-top: 15px;
    margin-bottom: 40px;
}

.portraitmargin {
    margin-right: 2%;
}

.fullWidth {
    width: 100%;
}

iframe {
    margin-top: 15px;
    margin-bottom: 35px;
    float: right;
    width: 74.5%;
    height: 540px;
}

.slick-gallery {
    margin-top: 15px;
    width: 74.5%;
    float: right;
    overflow: visible;
}


.slick-slide {
    text-align: center;
    
}

.slick-slide img {
    width: 100%;
}

.small-slick {
    width: 34.5%;
    margin-right: 20%;
}







@media only screen and (max-width: 1366px) {
    
    #name, nav, .projecttitle, #nextproject {
        font-size: 1.4rem;
    }
    
    
    table tr td {
        font-size: 1.2rem;
    }
    
    table tr th {
        font-size: 0.7rem;
    }
    
    table tr td:first-child {
        font-size: 0.7rem;
        
    }
}

@media only screen and (max-width: 1280px) {
    
    col {
        background: lightblue;
    }
    
    .span_2_of_6 {
        width: auto;
    }
    
    #name, nav, .projecttitle, #nextproject {
        font-size: 1.2rem;
/*        margin-left: 20px;*/
    }
    
    .projecttitle {
        margin-left: 3.25%;
    }
    
    #nextproject {
        bottom: 20px;
        right: 20px;
    }
    
    #introduction {
        min-width: 360px;
    }
    
    #introduction p:first-child {
        font-size: 2.0rem;
        margin-bottom: 1.2rem;
    }
    
    #introduction p {
        font-size: 0.8rem;
        line-height: 1.4rem;
        margin-bottom: 1.1rem;
    }
    
    table tr td {
        width: auto;
        font-size: 1.0rem;
    }
    
    table tr th {
        font-size: 0.7rem;
    }
    
    .projectlist {
        width: 100%;
        min-width: 360px;
    }
    
    h2 {
        font-size: 1.4rem;
        width: 90%;
        margin-left: 5%;
        margin-bottom: 8px;
    }
    
    .bodycopy {
        font-size: 0.9rem;
        line-height: 1.4rem;
        width: 90%;
        margin-right: 5%;
    }
    
    .projectinfotable { 
        width: 90%;
        margin-top: 75px;
        margin-left: 5%;
    }
    
    .projectinfotable tr td:first-child {
        font-size: 0.7rem;
        line-height: 1.1rem;
        padding-right: 5%;
    }
    
    .projectinfotable tr td:nth-child(2) {
        font-size: 0.8rem;
        line-height: 1.1rem;
    }
    
    .projectImage {
        width: 100%;
    }
    
    iframe {
        width: 100%;
        max-height: 360px;
    }
}

@media only screen and (max-width: 768px) {
    .projecttitle {
        margin-left: 5%;
        position: fixed;
            right: 20px;
    }
    
    #introduction {
        width: 60vw;
    }
    
    #introduction p{
        margin: 0 auto;
        font-size: 0.8rem;
        line-height: 1.3rem;
        margin-bottom: 0.9rem;
    }
    
    #introduction p:first-child {
        font-size: 1.2rem;
    }
    
    .slick-gallery {
        width: 100%;
    }
    
    .backgroundimages img {
        display: none;
    }
    
    .small-slick {
        margin-right: 0;
    }
    
    .small-slick div {
        width: 50%;
    }
    
    
}

/*  GO FULL WIDTH BELOW 480 PIXELS */
@media only screen and (max-width: 480px) {
	.col {  margin: 1% 0 1% 0%; }
    .col:first-child {
        margin-left: 0%;
    }
	.span_1_of_6, .span_2_of_6, .span_3_of_6, .span_4_of_6, .span_5_of_6, .span_6_of_6 { width: 100%; }
    
    #name, nav, .projecttitle, #nextproject {
        font-size: 1.0rem;
    }
    
    #name {
        top: 20px;
        left: 20px;
        
    }
    
    nav {
        bottom: 10px;
        left: 20px;
    }
    
    .projecttitle {
        top: -5px;
        right: 20px;
    }
    
    #nextproject {
        bottom: 15px;
        right: 20px;
    }
    
    .projectlist {
        margin-left: 20px;
    }
    
    #introduction {
        width: 100vw;
        padding: 0 20px;
        box-sizing: border-box;
    }
    
    
    #introduction p{
        font-size: 0.7rem;
        line-height: 1.2rem;
        margin-bottom: 0.75rem;
    }
    
    #introduction p:first-child {
        font-size: 1.2rem;
    }
    
}

